Fix blog dropdown hidden behind hero: set header_bottom_main z-index to 100

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3367,7 +3367,8 @@ div#main_search_collapse2 {
   top: 0px;
   left: 0px;
   right: 0px;
-  z-index: -1;
+  z-index: 100;
+  position: relative;
   background-color: #ffffff;
   max-width: 100%;
   height: auto;
